media/css/style.css
* {
    margin:0px;
    padding:0px;
}

html, body {
    height: 100%;
}

table				{
                    font: 88%/1.7em "Trebuchet MS", "Bitstream Vera Sans", Verdana, Helvetica, sans-serif;
					border-collapse: separate; border-spacing: 0; margin: 0 0 1em 0; color:#000;
					width:100%;
					}

th			{border-bottom: 1px solid #999;border-top: 1px solid #999;}
td			{line-height:normal; border-bottom: 1px solid #e1e1e1;}

td.action {
    text-align:center;
}

th,
td 					{padding: 0.25em;}

td					{text-align: left; vertical-align: top;}
tbody th			{font-weight: normal; white-space: nowrap;}

tbody th + td		{white-space: nowrap;}

tbody tr.odd th,
tbody tr.odd td 	{border-color: #deded8; background: #f9f9fb;}

tbody tr:hover td,
tbody tr:hover th 	{background: #fbfbf8;}
caption 			{font-weight: bold; font-size: 1.7em; text-align: left; margin: 0; padding: 0.5em 0.25em;}



table td {
    padding:10px;
}

table td ul {
    margin:0px;
}

body {
    font-family:"Trebuchet MS", "Bitstream Vera Sans", Verdana, Helvetica, sans-serif;
    line-height:1.8em;
}

.hide {
    display:none;
}

#rules {
    margin-top:30px;
}

h1 {
    margin:25px 0px;
}

h2 {
    border-bottom:1px solid #e1e1e1;
    margin:20px 0px;
}

#page_wrapper {
    min-height:100%;
    position:relative;
}

#header {
    border-bottom:1px solid #e1e1e1;
    padding:0px 10px;
    font-size:13px;
    margin-bottom:25px;
    text-align:right;
}
#header span {
    float:left;
}

#container {
    width:700px;
    margin:0px auto;
    padding-bottom: 50px; /* prevent overlap with footer */
}

#content {}

#footer {
    position:absolute;
    bottom:0;
    width:100%;
    border-top:1px solid #e1e1e1;    
    font-size:13px;
}
#footer p {
    padding-left: 10px;
}


label {
    display:block;
}

#upload-page {
    text-align:center;
    margin:150px 0px;
}

#login-form {
    margin:150px 0px;
}


#upload-page form {

}

ul, ol {
    margin-left:25px;
}


option {
    padding:0px 4px;
}

